# HyperBlast

./: .gitignore  Cargo.toml  README.md  todo.md
assets/: idle.psd  marine.psd  marine2.psd  run.psd
assets/0x72_16x16DungeonTileset.v5/0x72_16x16DungeonTileset.v5/: 0x72_16x16DungeonTileset.v5.json
assets/map/: map.ldtk
assets/map/map/backups/61204540-3b70-11ee-abce-5de1b7d1302b_2023-08-16_15-10-49_crash/: map.ldtk
assets/shaders/: outline.wgsl  post_processing.wgsl  zoom.wgsl
src/: animation.rs  animations.rs  camera.rs  debug.rs  main.rs  map.rs  mouse.rs  outline.rs  physics.rs  player.rs  rendering.rs  ui.rs
src/items/: adrenalin.rs  mod.rs
src/map/: colliders.rs  mod.rs  switch.rs
src/player/: assets.rs  bullets.rs  direction.rs  input.rs  inventory.rs  mod.rs  reload.rs  roll.rs  setup.rs  stats.rs  weapon.rs
src/player/guns/: auto.rs  charge.rs  flamethrower.rs  laser.rs  mod.rs  revolver.rs  semi_auto.rs  shotgun.rs  sniper.rs
src/player/inventory/: armory_manager.rs  assets.rs  inventory_manager.rs  item_manager.rs  items_imports.rs  mod.rs  pickup.rs  stats.rs  weapon_manager.rs
src/player/inventory/items/: null.rs
src/rendering/: mod.rs  outline.rs  utils.rs  zoom.rs
