[package]
name = "hyper_blast"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
bevy_ecs_tilemap = { git = "http://github.com/StarArawn/bevy_ecs_tilemap", version = "0.11", branch = "main" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls.git", branch = "main", optional = true}
leafwing-input-manager = "0.10.0"
bevy_prototype_debug_lines = "0.11"
bevy_rapier2d = "0.22.0"
image = "0.24.6"
rand = "0.8.5"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
strum = "0.25"
strum_macros = "0.25"
bevy_ecs_ldtk = "0.8.0"

[features]
editor = ["dep:bevy_editor_pls"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
